disbaled scrolling content on mobile / fix quick menu position on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
     @media (max-width: 1024px){
     flex-direction: column-reverse;
+    overflow: hidden;
   }
 }
 
